Added react router
Can be used to switch between pages. Added a few mock pages to verify
was working

--- a/src/css/title.module.css
+++ b/src/css/title.module.css
@@ -48,3 +48,9 @@
     width: 50%;
     margin: 50px auto;
 }
+
+/* Remove the default stlying for <a> elements created by react-router */
+.option > a {
+    color: inherit;
+    text-decoration: none;
+}
