--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,12 @@
 body {
-    background-color: antiquewhite;
-    font-family: Helvetica;
+    /* background-color: antiquewhite; */
+    background-color: rgb(248, 240, 230);
+    /* background-color: rgb(250, 250, 250); */
+
+    /* TODO - orange to go with blue? */
+    /* background-color: #ffbe6479; */
+
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
     letter-spacing: -2px;
 }
