--- a/src/css/layout.module.css
+++ b/src/css/layout.module.css
@@ -28,7 +28,7 @@
 }
 
 .centralCol {
-    width: 50%;
+    width: 75%;
     margin: 50px auto;
 }
 
@@ -81,4 +81,15 @@
     width: 40px;
     height: 36px;
     justify-content: center;
+}
+
+.navbar {
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    background-color: white;
+    width: 100%;
+    padding-top: 8px;
+    padding-bottom: 8px;
 }
