Changes home page a bit

--- a/src/css/home.module.css
+++ b/src/css/home.module.css
@@ -1,15 +1,53 @@
 .titleContainer {
     margin-bottom: 64px;
+    margin-left: 20px;
+}
+
+.titleContainer > :not(:last-child) {
+    margin-bottom: 8px;
 }
 
 .title {
     font-size: 100px;
     line-height: 80%;
-    margin-left: -5px;
 }
 
 .titleTop {
-    font-size: 30px;
+    font-size: 100px;
     line-height: 80%;
 }
 
+.titleMid {
+    font-size: 36px;
+    line-height: 80%;
+    margin-left: 60px;
+}
+
+.titleName {
+    font-size: 90px;
+    line-height: 80%;
+    margin-left: 72px;
+}
+
+.subtitle {
+    font-size: 26px;
+    line-height: 80%;
+    margin-left: 100px;
+    color: rgb(144, 144, 144);
+    letter-spacing: normal;
+}
+
+.centralCol {
+    width: 80%;
+    margin: 120px auto;
+}
+
+/* .twoCol {
+    display: grid;
+    grid-template-columns: 1.5fr 1fr;
+}
+
+.colOne {
+    display: flex;
+    flex-direction: column;
+} */
