--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,6 @@
 body {
     /* background-color: antiquewhite; */
-    background-color: rgb(248, 240, 230);
+    /* background-color: rgb(248, 240, 230); */
     /* background-color: rgb(250, 250, 250); */
 
     /* TODO - orange to go with blue? */
