--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,3 +2,9 @@ body {
     background-color: #f8f8f8;
     font-family: 'Gloria Hallelujah';
 }
+
+:root {
+    --primaryText: #000000;
+    --secondaryText: #999999;
+    --primaryHighlight: #ed801e;
+  }
