--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f8f8f8;
+    background-color: var(--primaryBackground);
     font-family: 'Gloria Hallelujah';
 }
 
@@ -7,4 +7,5 @@ body {
     --primaryText: #000000;
     --secondaryText: #999999;
     --primaryHighlight: #ed801e;
+    --primaryBackground: #f8f8f8
   }
