--- a/src/css/home.module.css
+++ b/src/css/home.module.css
@@ -21,7 +21,7 @@
     line-height: 90%;
 }
 
-.subtitleButton {
+.clickable {
     /* Remove button styling */
     all: unset;
     cursor: pointer;
@@ -64,11 +64,29 @@
 .options {
     top: 33%;
     margin-top: 240px;
+
+    display: flex;
+    flex-direction: column;
 }
 
-.options > div {
+/* Remove the default stlying for <a> elements created by react-router */
+.options > a {
+    color: inherit;
+    text-decoration: none;
+    width: fit-content;
+}
+
+.option {
     font-size: 30px;
     line-height: 160%;
+    width: fit-content;
+    transform: scale(1);
+    transition: transform 0.5s;
+    margin-left: 24px;
+}
+
+.option:hover {
+    transform: scale(1.05);
 }
 
 .centralContentRow {
