--- a/src/css/home.module.css
+++ b/src/css/home.module.css
@@ -11,10 +11,6 @@
     flex-direction: column;
 }
 
-.orange {
-    color: var(--primaryHighlight);
-}
-
 .title {
     font-size: 100px;
     color: var(--primaryText);
@@ -32,7 +28,7 @@
     color: var(--secondaryText);
     text-align: justify;
     padding-top: 12px;
-    width: 96%;
+    width: 95%;
     text-shadow: 1px 1px var(--primaryBackground);
     white-space: pre-wrap;
 }
@@ -51,7 +47,6 @@
 
 .subtitle > * {
     margin-top: 16px;
-
 }
 
 .centralText {
@@ -92,4 +87,22 @@
 .centralContentRow {
   position: fixed;
   width: 1000px;
+}
+
+.hiddenSmiley {
+    position: fixed;
+    top: 33%;
+    transform: translate(-530px, -60px) rotateZ(45deg);
+    font-size: 60px;
+
+    letter-spacing: 0px;
+    color: var(--tertiaryText);
+
+    line-height: 50px;
+    overflow: hidden;
+    /* margin-top: -64px; */
+}
+
+.orange {
+    color: var(--primaryHighlight);
 }
