Completely overhauled structure of site
Decided to do a single scrollable apge with anchor sections instead of
multiple pages. THis resolves the issue of directly navigating to a page
via url with react router. It also is better for SEO since all the
content will be available.

I think it also looks quite nice and simplifies the site.

--- a/src/css/home.module.css
+++ b/src/css/home.module.css
@@ -1,14 +1,16 @@
 .central {
     letter-spacing: 4px;
 
-    position: fixed;
+    /* position: fixed;
     left: 0;
-    right: 0;
+    right: 0; */
 
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+
+    height: inherit;
 }
 
 .title {
@@ -85,12 +87,11 @@
 }
 
 .centralContentRow {
-  position: fixed;
   width: 1000px;
 }
 
 .hiddenSmiley {
-    position: fixed;
+    /* position: fixed; */
     top: 33%;
     transform: translate(-530px, -60px) rotateZ(45deg);
     font-size: 60px;
