--- a/src/css/options.module.css
+++ b/src/css/options.module.css
@@ -113,13 +113,26 @@
     color: purple
 }
 
-/* .navbarOptionText {
-    color: black;
+.navbarOptionText,
+.navbarIcon {
+    /* Remove button styling */
+    all: unset;
+    cursor: pointer;
+}
+
+.navbarIcon {
+    color: var(--secondaryText);
+
 }
 
 .navbarOptionText:hover {
-    color: blue;
-} */
+    /* color: blue; */
+}
+
+.navbarOptionText > span {
+    writing-mode: vertical-lr;
+    transform: rotateZ(180deg);
+}
 
 .divider {
     /* Divider at bottom */
@@ -127,4 +140,47 @@
     border-bottom: 1px solid #bbb;
      border-image: linear-gradient(90deg, rgba(60,74,83,.00), rgba(60,74,83,0.90)) 1;
     width: 50%;
+}
+
+
+/* Restyle  */
+.navbarOptions2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+
+    /* Remove bullets */
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+
+    font-size: 30px;
+}
+
+.navbarOption2 {
+    /* transform: rotateZ(180deg); */
+    writing-mode: vertical-lr;
+    color: var(--secondaryText);
+    text-decoration: none;
+    height: 140px;
+    display: flex;
+    justify-content: center;
+    transition: color .5s ease;
+}
+
+.navbarOption2 > button {
+    color: inherit;
+    text-decoration: none;
+    writing-mode: vertical-lr;
+}
+
+.isActive {
+    color: var(--primaryText);
+}
+
+.orange {
+    color: var(--primaryHighlight);
+    font-size: 48px;
+    line-height: 60%;
 }
