Big clear up of files no longer needed

--- a/src/css/navigation.module.css
+++ b/src/css/navigation.module.css
@@ -43,3 +43,9 @@
 .isActive {
     color: var(--primaryText);
 }
+
+.orange {
+  color: var(--primaryHighlight);
+  font-size: 48px;
+  line-height: 60%;
+}  
