--- a/src/css/about.module.css
+++ b/src/css/about.module.css
@@ -1,14 +1,51 @@
+.about {
+    height: 100%;
+}
+
+.col {
+    height: 100%;
+}
+
+.imageCol {
+    display: flex;
+    /* align-items: center; */
+}
 
 .myImage {
     filter: drop-shadow(0px 0px 10px #222); 
-    /* transform: scaleX(-1); */
-    width:500px; /* you can use % */
+    width: 100%;
     height: auto;
-    /* filter:
-        drop-shadow(5px -10px 5px rgb(218, 59, 59))
-        drop-shadow(-10px 10px 5px rgb(54, 89, 192))
-        drop-shadow(-10px -6px 5px rgb(209, 209, 79))
-        drop-shadow(10px -5px 5px rgb(144, 54, 192)); */
+}
 
+.mainContent {
+    display: grid;
+    grid-template-columns: 1.5fr 1fr;
+    height: 100%;
+}
 
+.textContainer {
+    font-size: 20px;
+    width: 90%;
+    /* font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif */
+}
+
+.imageContainer {
+    width: 400px;
+    max-height: 450px;
+    height: 100%;
+    overflow: hidden;
+    padding: 24px;
+    border-bottom: rgba(0, 0, 0, 0.6) solid 2px;
+    box-shadow: 0 10px 8px -8px rgba(0, 0, 0, 0.6);
+    margin-top: 60px;
+
+}
+
+.title {
+    font-size: 64px;
+    line-height: 80%;
+}
+
+.orange {
+    color: var(--primaryHighlight);
 }
