--- a/src/css/projectCard.module.css
+++ b/src/css/projectCard.module.css
@@ -5,6 +5,11 @@
 
     /* Flip card behaviour */
     perspective: 1000px;
+    z-index: 0;
+}
+
+.cardOuter:hover {
+    z-index: 1;
 }
 
 .cardOuter:hover .cardInner {
@@ -23,6 +28,11 @@
     transform-style: preserve-3d;
 }
 
+.cardFront {
+    display: flex;
+    align-items: center;
+}
+
 .cardFront, .cardBack {
     /* Flip card behaviour */
     position: absolute;
@@ -33,16 +43,24 @@
     transform: rotateY(180deg);
 }
 
-.content, .background {
+.nameBanner {
+    background-color: var(--primaryBackground);
+    height: 120px;
+    width: 100%;
+    box-shadow: inset 0px 8px 6px -6px rgba(0, 0, 0, 0.412), inset 0px -8px 6px -6px rgba(0, 0, 0, 0.412);
+
+}
+
+ /* .content, .background {
     height: 100%;
     width: 100%;
     border: black 2px solid;
     border-radius: 24px;
-    box-sizing: border-box;
+    box-sizing: border-box; */
 
     /* Flip card behaviour */
-    backface-visibility: hidden;
-}
+    /* backface-visibility: hidden; */
+/* } */
 
 .content {
     padding: 16px;
@@ -51,8 +69,22 @@
     margin: -6px 0px 0px 3px;
 }
 
-.background {
+/* .background {
     background-color: rgb(206, 18, 18);
+} */
+
+.background {
+    height: 100%;
+    width: 100%;
+    /* border: black 2px solid; */
+    border-radius: 24px;
+    background-color: white;
+    background-size: cover;
+    box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.447);
+
+
+    /* Flip card behaviour */
+    backface-visibility: hidden;
 }
 
 /* Content of front of card */
