--- a/src/css/projectCard.module.css
+++ b/src/css/projectCard.module.css
@@ -1,7 +1,7 @@
 .cardOuter {
-    width: 360px;
-    height: 520px;
-    margin-bottom: 24px;
+    width: 320px;
+    height: 420px;
+    margin: 24px;
 
     /* Flip card behaviour */
     perspective: 1000px;
@@ -45,91 +45,37 @@
 
 .nameBanner {
     background-color: var(--primaryBackground);
-    height: 120px;
+    height: 18%;
     width: 100%;
     box-shadow: inset 0px 8px 6px -6px rgba(0, 0, 0, 0.412), inset 0px -8px 6px -6px rgba(0, 0, 0, 0.412);
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    padding-left: 8px;
+    padding-right: 8px;
 }
 
- /* .content, .background {
-    height: 100%;
-    width: 100%;
-    border: black 2px solid;
-    border-radius: 24px;
-    box-sizing: border-box; */
-
-    /* Flip card behaviour */
-    /* backface-visibility: hidden; */
-/* } */
-
-.content {
-    padding: 16px;
-    background-color: white;
-    /* t, r, b, l */
-    margin: -6px 0px 0px 3px;
+.projectName {
+    font-size: 20px;
+    color: var(--primaryText);
+    line-height: 80%;
 }
 
-/* .background {
-    background-color: rgb(206, 18, 18);
-} */
+.projectDescriptionShort {
+    font-size: 16px;
+    color: var(--secondaryText);
+    line-height: 80%;
+}
 
 .background {
     height: 100%;
     width: 100%;
-    /* border: black 2px solid; */
-    border-radius: 24px;
-    background-color: white;
+    border-radius: 16px;
+    background-color: var(--primaryBackground);
     background-size: cover;
-    box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.447);
-
+    box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.404);
 
     /* Flip card behaviour */
     backface-visibility: hidden;
-}
-
-/* Content of front of card */
-.cardMain {
-    display: inline-flex;
-    align-items: center;
-    flex-direction: column;
-    letter-spacing: normal;
-}
-
-.contentLine {
-    margin-bottom: 8px;
-}
-
-.circularImg {
-    width: 260px;
-    height: 260px;
-    object-fit: cover;
-    border: 2px solid rgb(0, 0, 0); 
-    border-radius: 50%;
-    margin-top: 12px;
-    margin-bottom: 24px;
-}
-
-.title {
-    font-weight: bold;
-    font-size: 24px;
-}
-
-.technologies {
-    font-weight: normal;
-    font-size: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    color: #888;
-    width: 100%;
-}
-
-.description {
-    font-weight: normal;
-    font-size: 20px;
-    color: #555;
-}
-
-/* Content of back of card */
-.cardExtraInfo {
 }
