--- a/src/css/home.module.css
+++ b/src/css/home.module.css
@@ -26,7 +26,7 @@
 }
 
 .subtitle {
-    line-height: 30px;
+    line-height: 80%;
     color: var(--secondaryText);
     text-align: justify;
     padding-top: 12px;
@@ -52,10 +52,10 @@
 }
 
 .centralText {
-    top: 33%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 64px;
 }
 
 .options {
@@ -91,9 +91,7 @@
 }
 
 .hiddenSmiley {
-    /* position: fixed; */
-    top: 33%;
-    transform: translate(-530px, -60px) rotateZ(45deg);
+    transform: translate(-530px, -20px) rotateZ(45deg);
     font-size: 60px;
 
     letter-spacing: 0px;
@@ -101,7 +99,6 @@
 
     line-height: 50px;
     overflow: hidden;
-    /* margin-top: -64px; */
 }
 
 .orange {
